tests/baselines/reference/voidUndefinedReduction.errors.txt
voidUndefinedReduction.ts(3,10): error TS99999: Function was inferred to be a type guard


==== voidUndefinedReduction.ts (1 errors) ====
    // Repro from #42786
    
    function isDefined<T>(value: T | undefined | null | void): value is T {
             ~~~~~~~~~
!!! error TS99999: Function was inferred to be a type guard
      return value !== undefined && value !== null;
    }
    
    declare const foo: string | undefined;
    
    if (isDefined(foo)) {
      console.log(foo.toUpperCase()); 
    }
    